z-index fix for P4

--- a/assets/style.css
+++ b/assets/style.css
@@ -140,7 +140,7 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.8);
   border-radius: 10px;
   padding: .3rem;
-  z-index: 1;
+  z-index: 5;
   display: none;
 }
 #searchResults.isVisible {
